--- a/lib/web/assets/styles/default.css
+++ b/lib/web/assets/styles/default.css
@@ -1,76 +1,29 @@
-/* Styles mainly from http://twitter.github.com/bootstrap/ */
-* {
-    padding: 0;
-    margin: 0;
-}
+@import "//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css";
 
 body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 13px;
-    line-height: 18px;
-    color: #333;
-    padding: 45px 0 20px;
+    padding-top: 4em;
 }
 
-.navbar {
-    background-color: #2C2C2C;
-    background-image: -webkit-linear-gradient(top, #333, #222);
-    background-repeat: repeat-x;
-    box-shadow: rgba(0, 0, 0, 0.246094) 0px 1px 3px 0px, rgba(0, 0, 0, 0.0976563) 0px -1px 0px 0px inset;
-    position: fixed;
-    left: 0px;
-    right: 0px;
-    top: 0px;
-    color: #fff;
-    display: block;
-    height: 24px;
-    font-size: 20px;
-    font-weight: 200;
-    padding: 8px 50px;
-}
-
-.navbar .query {
-    background-color: #626262;
-    border-color: #151515;
-    border-radius: 14px 14px 14px 14px;
-    border-style: solid;
-    border-width: 1px;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.098) inset, 0 1px 0 0 rgba(255, 255, 255, 0.15);
+.navbar-inverse .navbar-brand {
     color: white;
-    display: inline-block;
-    float: right;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 13px;
-    height: 18px;
-    line-height: 13px;
-    margin-top: -2px;
-    padding: 4px 9px;
-    width: 160px;
-}
-
-.navbar .query:focus,
-.navbar .query.focused {
-  padding: 5px 10px;
-  color: #333333;
-  text-shadow: 0 1px 0 #ffffff;
-  background-color: #ffffff;
-  border: 0;
-  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
-  outline: 0;
 }
 
 .log {
     white-space: pre-wrap;
+    color: black;
+    font-size: .85em;
+    background: inherit;
+    border: 0;
+    padding: 0;
 }
 
 .log .inner-line {
-    padding: 0 50px;
-    margin-left: 96pt;
-    text-indent: -96pt;
+    padding: 0 15px;
+    margin-left: 84pt;
+    text-indent: -84pt;
+    margin-bottom: 0;
 }
 
-.log .line.selected {
-    background-color: pink;
+.log .line-selected {
+    background-color: #ffb2b0;
 }
