--- a/lib/web/assets/styles/default.css
+++ b/lib/web/assets/styles/default.css
@@ -1,4 +1,4 @@
-@import "//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css";
+@import "bootstrap.min.css";
 
 body {
     padding-top: 4em;
