--- a/lib/web/assets/styles/default.css
+++ b/lib/web/assets/styles/default.css
@@ -4,6 +4,10 @@ body {
     padding-top: 4em;
 }
 
+.no-topbar {
+    padding-top: 10px;
+}
+
 .navbar-inverse .navbar-brand {
     color: white;
 }
@@ -22,6 +26,11 @@ body {
     margin-left: 84pt;
     text-indent: -84pt;
     margin-bottom: 0;
+}
+
+.log.no-indent .inner-line {
+    margin-left: 0;
+    text-indent: 0;
 }
 
 .log .line-selected {
