fix showing empty lines. Closes #78. Closes #79

--- a/lib/web/assets/styles/default.css
+++ b/lib/web/assets/styles/default.css
@@ -28,6 +28,11 @@ body {
     margin-bottom: 0;
 }
 
+.log .inner-line:empty::after {
+    content: '.';
+    visibility: hidden;
+}
+
 .log.no-indent .inner-line {
     margin-left: 0;
     text-indent: 0;
