--- a/web/assets/styles/default.css
+++ b/web/assets/styles/default.css
@@ -10,14 +10,30 @@ body {
 }
 
 .navbar-brand {
-  width: 100%;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
 }
 
+.btn-pause {
+    margin: 8px 0 8px;
+    background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' fill='%23999' viewBox='0 0 8 8'><path d='M1 1v6h2v-6h-2zm4 0v6h2v-6h-2z'></path></svg>") no-repeat center center;
+    background-color: #e2e6ea;
+    background-size: contain;
+    cursor: pointer;
+    display: inline-block;
+    height: 34px;
+    width: 34px;
+    border: 1px solid #ccc;
+}
+
+.btn-pause.play {
+    background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' fill='%23999' viewBox='0 0 8 8'><path d='M1 1v6l6-3-6-3z'></path></svg>") no-repeat center center;
+    background-color: #e2e6ea;
+}
+
 .navbar-form-custom {
-  padding: 8px 12px 8px 0;
+  padding: 8px 0;
 }
 
 .no-horiz-padding {
